fix: resolved social component alignment issue

--- a/assets/css/unminified/frontend.css
+++ b/assets/css/unminified/frontend.css
@@ -3229,6 +3229,8 @@ body .entry-content .wp-block-latest-posts li {
 }
 
 .ast-builder-grid-row.ast-grid-center-col-layout-only {
+  -js-display: flex;
+  display: flex;
   height: 100%;
   justify-content: center;
 }
