--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -154,6 +154,7 @@
 	}
 }
 .ast-builder-grid-row.ast-grid-center-col-layout-only {
+	display: flex;
 	height: 100%;
 	justify-content: center;
 	.ast-grid-section-center {
